# android-repository-history

./: Cargo.toml  Dockerfile  README.md  auto.sh  go.mod  update.go
.github/workflows/: build.yml  update.yml
repository/: addon.xml  addon2-1.xml  addon2-2.xml  addon2-3.xml  addons_list-2.xml  addons_list-3.xml  addons_list-4.xml  addons_list-5.xml  repository-11.xml  repository-12.xml  repository2-1.xml  repository2-2.xml  repository2-3.xml
repository/extras/intel/: addon.xml  addon2-1.xml  addon2-2.xml  addon2-3.xml
repository/glass/: addon.xml  addon2-1.xml  addon2-2.xml  addon2-3.xml
repository/sys-img/android/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/android-automotive/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/android-automotive-distantdisplay/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/android-automotive-multiwindow/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/android-desktop/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/android-tv/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/android-wear/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/android-wear-cn/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/aosp_atd/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/aosp_tablet/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
repository/sys-img/google-tv/: sys-img2-1.xml  sys-img2-2.xml  sys-img2-3.xml
src/: main.rs
(+17 files in other folders)
